<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    
    <LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="8dp" >
	    <ImageView 
	        android:id="@+id/poster"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_launcher"
		    android:contentDescription="@drawable/ic_launcher" />
	    <LinearLayout android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:padding="8dp" >
		    <TextView
		        android:id="@+id/title"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:gravity="center_vertical"
		        android:text="@string/title"/>
		    <TextView 
		        android:id="@+id/release"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:gravity="center_vertical"
		        android:text="@string/release_date"/>
		    <TextView
		        android:id="@+id/actors"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:gravity="center_vertical"
		        android:text="@string/actors"/>
	    </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
	    android:text="@string/description"/>

    <Button
        android:id="@+id/trailer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trailer_button" />
    
</LinearLayout>
    
